# TrivialWar

./: .gitignore  CMakeLists.txt  LICENSE  README.md
engine/src/: drawble_interface.hpp
presentation_tool/: template_pt.cmake
presentation_tool/qml/: Main.qml  MainController.qml  Map.qml
presentation_tool/src/: main.cpp  qml_window_controller.cpp  qml_window_controller.hpp
presentation_tool/src/engine/: engine_proxy.cpp  engine_proxy.h
presentation_tool/src/views/: game_widget_base.cpp  game_widget_base.hpp  main_view.cpp  main_view.h  map_view.hpp
